<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".Fragments.HomeFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        app:cardElevation="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:padding="10dp"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="Total Cases"
                android:gravity="center"
                android:fontFamily="@font/lato_bold"
                android:textSize="22sp"
                android:id="@+id/tv1"
                android:paddingTop="5dp">
            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="00000"
                android:textColor="@color/black"
                android:paddingTop="5dp"
                android:id="@+id/totalcases"
                android:layout_below="@+id/tv1"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center"
                android:textSize="20sp"
                android:layout_alignParentRight="true">
            </TextView>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        app:cardElevation="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:padding="10dp"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Total Deaths"
                android:gravity="center"
                android:fontFamily="@font/lato_bold"
                android:textSize="22sp"
                android:paddingTop="5dp"
                android:id="@+id/tv2"
                android:textColor="@color/red">
            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="00000"
                android:layout_below="@+id/tv2"
                android:paddingTop="5dp"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="@color/red"
                android:id="@+id/totaldeaths"
                android:layout_alignParentRight="true">
            </TextView>


        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        app:cardElevation="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:padding="10dp"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Total Recovered"
                android:fontFamily="@font/lato_bold"
                android:textSize="22sp"
                android:id="@+id/tv3"
                android:gravity="center"
                android:paddingTop="5dp"
                android:textColor="@color/green">
            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="00000"
                android:fontFamily="@font/poppins_regular"
                android:layout_alignParentEnd="true"
                android:textSize="20sp"
                android:id="@+id/totalrecv"
                android:gravity="center"
                android:layout_below="@+id/tv3"
                android:textColor="@color/green"
                android:paddingTop="5dp"
                android:layout_alignParentRight="true">
            </TextView>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginBottom="40dp"
        android:layout_margin="10dp"
        android:background="@drawable/back_solid">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            app:cardBackgroundColor="@color/green"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            app:cardCornerRadius="20dp"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/seguisb"
                    android:textColor="@color/white"
                    android:text="@string/queSec"
                    android:id="@+id/q1"
                    android:textSize="20sp">
                </TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/seguisb"
                    android:textColor="@color/white"
                    android:layout_marginTop="5dp"
                    android:text="@string/ansFirstText"
                    android:textSize="16sp">
                </TextView>

            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            app:cardBackgroundColor="@color/red"
            android:background="@color/white"
            app:cardCornerRadius="20dp"
            android:layout_marginBottom="60dp"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/seguisb"
                    android:textColor="@color/white"
                    android:text="@string/queSec2"
                    android:id="@+id/q2"
                    android:textSize="20sp">
                </TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/seguisb"
                    android:textColor="@color/white"
                    android:layout_marginTop="5dp"
                    android:text="@string/ansFirstText2"
                    android:textSize="16sp">
                </TextView>

            </LinearLayout>


        </androidx.cardview.widget.CardView>

    </LinearLayout>

</LinearLayout>